force-app/main/default/objects/custom_create354__c/custom_create354__c.object-meta.xml
<CustomObject>
    <label>Custom created object354</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects354</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>