force-app/main/default/objects/custom_create354__c/fields/custom_create_354field529__c.field-meta.xml
<CustomField>
    <fullName>custom_create_354field529__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 354field529</label>
    <type>Checkbox</type>
</CustomField>