force-app/main/default/objects/custom_create354__c/fields/custom_create_354field584__c.field-meta.xml
<CustomField>
    <fullName>custom_create_354field584__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 354field584</label>
    <type>Checkbox</type>
</CustomField>